# PartiColl

./: CMakeLists.txt
test/: main_test.cu
